--- a/package.json
+++ b/package.json
@@ -6,15 +6,21 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "cookie-parser": "~1.4.4",
     "date-format": "^4.0.14",
     "dateformat": "^5.0.3",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "express-vue": "^4.0.14",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
     "mongoose": "^6.7.2",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0"
   }
 }
