--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jade": "^0.29.0",
     "mongoose": "^6.7.2",
     "morgan": "~1.9.1",
+    "stream-json": "^1.7.5",
     "vue-mq": "^1.0.1"
   },
   "devDependencies": {
