--- a/package.json
+++ b/package.json
@@ -7,17 +7,22 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "base64url": "^3.0.1",
+    "connect-sqlite3": "^0.9.13",
     "cookie-parser": "~1.4.4",
     "date-format": "^4.0.14",
     "dateformat": "^5.0.3",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "express-session": "^1.17.3",
     "express-vue": "^4.0.14",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
     "mongoose": "^6.7.2",
     "morgan": "~1.9.1",
+    "passport": "^0.6.0",
+    "passport-google-oidc": "^0.1.0",
     "stream-json": "^1.7.5",
     "vue-mq": "^1.0.1"
   },
