Combine views into one home view; fix autocomplete bug

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-vue": "^4.0.14",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
+    "localtunnel": "^2.0.2",
     "mongoose": "^6.7.2",
     "morgan": "~1.9.1",
     "passport": "^0.6.0",
