--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "build_client": "vue-cli-service build"
   },
   "dependencies": {
-    "axios": "^1.1.3",
+    "@vue/cli-service": "^5.0.8",
+    "axios": "^1.3.1",
     "base64url": "^3.0.1",
     "connect-sqlite3": "^0.9.13",
     "cookie-parser": "~1.4.4",
@@ -25,6 +27,8 @@
     "passport": "^0.6.0",
     "passport-google-oidc": "^0.1.0",
     "stream-json": "^1.7.5",
+    "vue-axios": "^3.5.2",
+    "vue-meta": "^2.4.0",
     "vue-mq": "^1.0.1"
   },
   "devDependencies": {
