--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@vue/cli-service": "^5.0.8",
     "axios": "^1.3.1",
     "base64url": "^3.0.1",
+    "bootstrap": "^5.2.3",
     "connect-sqlite3": "^0.9.13",
     "cookie-parser": "~1.4.4",
     "date-format": "^4.0.14",
@@ -19,8 +20,11 @@
     "express": "~4.16.1",
     "express-session": "^1.17.3",
     "express-vue": "^4.0.14",
+    "fuzzysort": "^2.0.4",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
+    "jquery": "^3.6.3",
+    "jquery-ui": "^1.13.2",
     "localtunnel": "^2.0.2",
     "mongoose": "^6.7.2",
     "morgan": "~1.9.1",
