--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,28 +1,26 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
+  "version": "0.2.0",
+  "configurations": [
     {
-        "name": "Vuejs: Chrome",
-        "request": "launch",
-        "type": "chrome",
-        "url": "http://localhost:8081",
-        "webRoot": "${workspaceFolder}",
-        "breakOnLoad": true,
-        "sourceMapPathOverrides": {
-            "webpack:///src/*": "${webRoot}/*"
-        }
-    },
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Launch Program",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "program": "${workspaceFolder}\\bin\\www"
-        }
-    ]
+      "type": "chrome",
+      "request": "launch",
+      "name": "vuejs: chrome",
+      "url": "http://localhost:8081",
+      //"webRoot": "${workspaceFolder}",
+      "webRoot": "C:/Users/ragax/Repos",
+      "breakOnLoad": true,
+      "pathMapping": {
+        "/_karma_webpack_": "${workspaceFolder}",
+        "c:": "C:"
+      },
+      "sourceMapPathOverrides": {
+        "webpack:/*": "${webRoot}/*",
+        // "/./*": "${webRoot}/*",
+        //"/src/*": "${webRoot}/*",
+        "/*": "*",
+        "/./~/*": "${webRoot}/node_modules/*"
+      },
+      "preLaunchTask": "vuejs: start"
+    }
+  ]
 }
