--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "build_client": "vue-cli-service build"
+    "build_client": "vue-cli-service build",
+    "serve_client": "vue-cli-service serve --port 8081"
   },
   "dependencies": {
     "@vue/cli-service": "^5.0.8",
