--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.3.1",
     "base64url": "^3.0.1",
     "bootstrap": "^5.2.3",
+    "bootstrap-vue": "^2.23.1",
     "connect-sqlite3": "^0.9.13",
     "cookie-parser": "~1.4.4",
     "date-format": "^4.0.14",
@@ -32,6 +33,7 @@
     "passport": "^0.6.0",
     "passport-google-oidc": "^0.1.0",
     "stream-json": "^1.7.5",
+    "vue": "^2.7.14",
     "vue-axios": "^3.5.2",
     "vue-meta": "^2.4.0",
     "vue-mq": "^1.0.1"
