--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "vue": "^2.7.14",
     "vue-axios": "^3.5.2",
     "vue-meta": "^2.4.0",
-    "vue-mq": "^1.0.1"
+    "vue-mq": "^1.0.1",
+    "vue-router": "^3.6.5"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
