Try to fix update-with-bad-wifi issue; fiddle with vs code launch settings; make a little green dot show up when a modify request goes through

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,10 +1,12 @@
 {
   "version": "0.2.0",
   "configurations": [
+
+
     {
-      "type": "chrome",
+      "type": "firefox",
       "request": "launch",
-      "name": "vuejs: chrome",
+      "name": "vuejs: firefox",
       "url": "http://localhost:8081",
       //"webRoot": "${workspaceFolder}",
       "webRoot": "C:/Users/ragax/Repos",
@@ -19,7 +21,7 @@
         "/*": "*",
         "/./~/*": "${webRoot}/node_modules/*"
       },
-      "preLaunchTask": "vuejs: start"
+      "preLaunchTask": "start"
     }
   ]
 }
