Refactor autocomplete to separate component

--- a/dev.env
+++ b/dev.env
@@ -1,5 +1,5 @@
-# DB_CONN_STRING="mongodb://127.0.0.1:27017/gamers-library-picks?readPreference=primary&directConnection=true&ssl=false"
-DB_CONN_STRING="mongodb+srv://sgold:cobbledWings12@serverlessinstance0.zp9ac.mongodb.net/gamers-library-orders?readPreference=primary&retryWrites=true&w=majority"
+DB_CONN_STRING="mongodb://127.0.0.1:27017/gamers-library-picks?readPreference=primary&directConnection=true&ssl=false"
+#DB_CONN_STRING="mongodb+srv://sgold:cobbledWings12@serverlessinstance0.zp9ac.mongodb.net/gamers-library-orders?readPreference=primary&retryWrites=true&w=majority"
 # hostname="192.168.86.50"
 #hostname="192.168.1.198"
 PORT="8080"
